🎨 Collectors.toList() -> Stream.toList()